# toj2

./: .gitignore  pyproject.toml
docs/: README.md  release-note.md
docs/csv/: csv-tutorial.md
docs/excel/: excel-tutorial.md
tests/: test_config.py  test_console_message.py  test_csv.py  test_excel_file.py  test_excel_logic.py  test_json.py  test_runner.py  test_yaml.py
tests/csv/expect/: convert_escaped.txt  datef.txt  zfilldate.txt
tests/csv/src/: convert_escaped.csv  datef.csv  zfilldate.csv
tests/csv/templates/: convert_escaped.tmpl  datef.tmpl  group_by.tmpl  merge_parameters.tmpl  parameters.tmpl  zfilldate.tmpl
tests/excel/expect/: 000_sheet01.split.txt  000_simple  001_sheet02.split.txt  002_sheet03.split.txt
tests/excel/src/: split.xlsx
tests/excel/templates/: split.tmpl
tests/json/expect/: test_json_dump.json
tests/output/excel/: 000_Sheet01.split.txt  000_Sheet01_split.txt  001_Sheet02.split.txt  001_Sheet02_split.txt  002_Sheet03.split.txt  002_Sheet_3_split.txt
tests/yaml/expect/: simple_yaml.sql
tests/yaml/src/: simple_yaml.yaml
tests/yaml/templates/: simple_yaml.tmpl
toj2/: __init__.py  command.py  jinja2_custom_filter.py  loader.py  processors.py  runner.py  utils.py
toj2/csv/: csv_command.py
toj2/excel/: excel_command.py  excel_processor.py
toj2/json/: json_command.py
toj2/yaml/: yaml_command.py  yaml_loader.py
